@@ -14469,6 +14469,7 @@ M       cat_vol_simgrow.mexw32
 Fixed: Compiled for 32bit Windows.
 
 ------------------------------------------------------------------------
+r1127 | gaser | 2017-05-05 09:49:49 +0200 (Fr, 05 Mai 2017) | 8 lines
 
 Changed paths:
 M       CHANGES.txt
@@ -14477,5 +14478,14 @@ A       cat_stat_diff.m
 M       kmeans3D.m
 
 Added: Tool for calculating differences between multiple images or surfaces.
+
 ------------------------------------------------------------------------
-r1127 | gaser | 2017-05-05 09:49:21
+
+Changed paths:
+M       CHANGES.txt
+M       cat_run_job.m
+M       cat_vol_ctype.m
+
+Fixed: Solved some compatibility issues with windows.
+------------------------------------------------------------------------
+r1128 | gaser | 2017-05-05 10:37:38
